fix: Clean up commented code and improve test assertions
- Replace commented @Test annotations with clear TODO comments in InventoryControllerMinimalIT
- Replace chained containsEntry() with containsOnly() in FraudAlertTest (better AssertJ pattern)
- Remove unnecessary eq() wrappers in InvestmentProfitServiceTest (Mockito best practice)